BLC-713 fixed dynamic form elements overlapping drop shadow

--- a/admin/broadleaf-open-admin-platform/src/main/java/org/broadleafcommerce/openadmin/theme/broadleaf/public/sc/skins/Broadleaf/less/skin_styles.less
+++ b/admin/broadleaf-open-admin-platform/src/main/java/org/broadleafcommerce/openadmin/theme/broadleaf/public/sc/skins/Broadleaf/less/skin_styles.less
@@ -1363,9 +1363,8 @@ Button (also used as MenuButton base style)
 ============================================================*/
 .toolStrip {
     color: @navbarText;
-    min-height: @navbarHeight;
     #gradient > .vertical(@white, #f2f2f2);
-    .box-shadow(~"0 1px 3px rgba(0,0,0,.25), inset 0 -1px 0 rgba(0,0,0,.1)");
+    box-shadow: 0 1px 3px #444;
 }
 
 .toolStripLayoutDropLine {
